// TelemetryX Event Definitions
// ============================================
// TODO: Define your gRPC services and messages here
// ============================================

syntax = "proto3";

package telemetryx;

// Placeholder service - implement your gRPC API
service AnalyticsService {
  // TODO: Add your RPC methods
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {}

message PingResponse {
  string message = 1;
}

